# HekmatMind

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  benchmark_einfach.command  codecov.yml
.github/workflows/: rust-ci.yml
coverage/: cobertura.xml  tarpaulin-report.json
hekmat_mind/: Cargo.toml
hekmat_mind/benches/: common.rs  event_broker_benchmark.rs
hekmat_mind/benches/neuron/: benchmark.rs
hekmat_mind/benches/synapse/: benchmark.rs
hekmat_mind/src/: lib.rs
hekmat_mind/src/benchmark/: mod.rs  scenarios.rs  tests.rs
hekmat_mind/src/entropy/: cache.rs  extractors.rs  mod.rs  prelude.rs  tests.rs
hekmat_mind/src/entropy/sources/: mod.rs  satellite.rs  system.rs  weather.rs
hekmat_mind/src/event_broker/: mod.rs  tests.rs
hekmat_mind/src/neural/: mod.rs
hekmat_mind/src/neural/growth/: axon.rs  dendritic_growth.rs  mod.rs  tests.rs  tests_debug.rs  types.rs
hekmat_mind/src/neural/network/: model.rs  tests.rs
hekmat_mind/src/neural/neuron/: mod.rs  model.rs  tests.rs
hekmat_mind/src/neural/synapse/: mod.rs  model.rs  tests.rs
hekmat_mind/src/telemetry/: collector.rs  in_memory.rs  in_memory_tests.rs  mod.rs  tests.rs
hekmat_mind/tests/: benchmark_scenarios_test.rs  benchmark_tests.rs  event_broker_integration_test.rs  lib.rs  network_scalability_bin_test.rs  neural_regression_tests.rs  telemetry_collector_test.rs  telemetry_coverage_tests.rs  telemetry_tests.rs  test_registry.rs  test_registry_test.rs
hekmat_mind/tests/regression/: mod.rs
hekmat_mind/tests/regression/event_broker/: mod.rs
hekmat_mind/tests/regression/neural/: mod.rs  network_baseline_test.rs  neuron_baseline_test.rs  synapse_baseline_test.rs
