[package]
name = "hekmat_mind"
version = "0.1.0"
edition = "2024"
authors = ["HekmatMind Team"]
description = "Eine biologisch inspirierte KI-Architektur - Hauptcrate"

[dependencies]
# Abhängigkeiten aus dem Workspace
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
rand = "0.8.5"
lazy_static = "1.5.0"
once_cell = "1.21.1"

# Entropiequellen-Abhängigkeiten
async-trait = "0.1.88"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
sha2 = "0.10.8"
libc = "0.2.153"

[dev-dependencies]
# Testabhängigkeiten
proptest = "1.4.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
mockall = "0.12.1"
uuid = { version = "1.8.0", features = ["v4"] }
serial_test = "3.0.0"
tokio-test = "0.4.3"
futures = "0.3.30"

# Benchmark-Konfiguration
[[bench]]
name = "event_broker_benchmark"
harness = false

[[bench]]
name = "neuron_benchmark"
path = "benches/neuron/benchmark.rs"
harness = false

[[bench]]
name = "synapse_benchmark"
path = "benches/synapse/benchmark.rs"
harness = false
